--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,3 +1,2 @@
-set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-
-add_subdirectory(hello_world)
+add_library(wrappers_INC INTERFACE Shader.hpp Window.hpp Cube.hpp Ubo.hpp)
+target_include_directories(wrappers_INC INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
