color per cube side + animation with translation

--- a/res/CMakeLists.txt
+++ b/res/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(linmath STATIC linmath.h linmath.c)
 target_include_directories(linmath
-    PUBLIC  
+    INTERFACE 
         ${CMAKE_CURRENT_SOURCE_DIR}
 )
