--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,8 @@ include(${_project_options_SOURCE_DIR}/Index.cmake)
 
 ### set up project ###
 project(rw_cube
-  VERSION 0.0.1
-  DESCRIPTION ""
+  VERSION 0.0.2
+  DESCRIPTION "cube demo"
   HOMEPAGE_URL "https://github.com/JungerBoyo/RW_cube"
   LANGUAGES C CXX
 )
