--- a/res/CMakeLists.txt
+++ b/res/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(RESOURCE_FILES_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
 add_library(linmath STATIC linmath.h linmath.c)
 target_include_directories(linmath
     INTERFACE 
