--- a/shaders/CMakeLists.txt
+++ b/shaders/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(SHCONFIG INTERFACE)
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_MVP_UBO_BINDING=0)
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_IN_POSITION_LOCATION=0)
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_IN_COLOR_LOCATION=1)
+target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_IN_OFFSET_LOCATION=2)
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_GL_VERSION_MAJOR=4)
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_GL_VERSION_MINOR=5)
 
