--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,10 @@ name: ci
 on:
   release:
     types: [published]
+  push:
+    tags:
+    branches:
+      - main
 
 env: 
   CONAN_SYSREQUIRES_MODE: enabled
