--- a/shaders/CMakeLists.txt
+++ b/shaders/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(SHCONFIG INTERFACE)
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_MVP_UBO_BINDING=0)
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_2D_TEX_ARRAY_BINDING=1)
+target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_2D_MODEL_TEX_BINDING=2)
 
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_IN_POSITION_LOCATION=0)
 target_compile_definitions(SHCONFIG INTERFACE SHCONFIG_IN_TEXCOORD_LOCATION=1)
