--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,17 @@ find_package(glfw3 REQUIRED)
 find_package(glad REQUIRED)
 find_package(spdlog REQUIRED)
 
-add_library(wrappers_IMPL STATIC Shader.cpp Window.cpp Cube.cpp Ubo.cpp Camera.cpp CubeTexture.cpp)
+add_library(wrappers_IMPL 
+  STATIC 
+    Shader.cpp 
+    Window.cpp 
+    Cube.cpp 
+    Ubo.cpp 
+    Camera.cpp 
+    CubeTexture.cpp
+    Model.cpp
+    utils.cpp
+)
 target_link_libraries(wrappers_IMPL PUBLIC wrappers_INC)
 target_link_system_libraries(wrappers_IMPL
   PRIVATE
