--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,8 @@ install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "./")
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/shaders/bin DESTINATION "shaders/")
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/shaders/src DESTINATION "shaders/")
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/assets/textures DESTINATION "assets/")
+install(DIRECTORY ${PROJECT_SOURCE_DIR}/assets/materials DESTINATION "assets/")
+install(DIRECTORY ${PROJECT_SOURCE_DIR}/assets/models DESTINATION "assets/")
 
 set(CPACK_PACKAGE_FILE_NAME 
   "${PROJECT_NAME}-${CMAKE_PROJECT_VERSION}-${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_VERSION}-${CMAKE_BUILD_TYPE}-${CMAKE_CXX_COMPILER_ID}-${CMAKE_CXX_COMPILER_VERSION}"
